--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,7 @@ img {
 /* Main header */
 
 .main-header {
-  outline: 5px solid rgba(0, 255, 0, 0.7);
-  outline-offset: -5px;
+  margin-top: 20px;
 }
 
 .main-header-inner-page {
@@ -108,7 +107,7 @@ img {
   background: linear-gradient(180deg, var(--basic-white) 6%, var(--background-yellow) 6%);
 }
 
-.main-navigation-inner-page{
+.main-navigation-inner-page {
   height: 206px;
 }
 
@@ -122,10 +121,7 @@ img {
   list-style: none;
   padding: 0;
   margin: 0;
-
   max-width: 500px;
-  outline: 5px solid rgba(0, 255, 255, 0.3);
-  outline-offset: -5px;
 }
 
 .header-site-navigation a {
@@ -295,8 +291,6 @@ img {
 }
 
 .main-menu {
-  outline: 5px solid rgba(0, 38, 255, 0.425);
-  outline-offset: -5px;
   width: 100%;
 }
 
@@ -319,9 +313,11 @@ img {
   display: block;
 }
 
-.main-menu-list a:not(.catalog-item) {
+.main-menu-list a:not(.header-catalog-item) {
   letter-spacing: 0.2em;
 }
+
+/* Catalog */
 
 .catalog {
   position: relative;
@@ -353,6 +349,17 @@ img {
 .main-menu-list li:last-child {
   margin-left: auto;
 }
+
+
+
+
+
+
+
+
+
+
+
 
 
 .catalog,
@@ -400,19 +407,38 @@ img {
 }
 
 .header-catalog-list {
+  /*display: none;*/
+
   list-style: none;
   padding: 0;
   margin: 0;
-  display: none;
+  margin-top: 29px;
+}
+
+.header-catalog-list li{
+  margin-bottom: 13px;
 }
 
 .header-catalog-item {
-  font-family: "Open Sans", "Arial", sans-serif;
+font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 300;
   font-size: 15px;
   line-height: 20px;
-  text-decoration: none;
   text-transform: none;
+}
+
+.header-catalog-item:hover,
+.header-catalog-item:focus{
+  opacity: 0.6;
+}
+
+.header-catalog-item:active{
+  opacity: 0.3;
+}
+
+
+.header-catalog-item a{
+  text-decoration: none;
 }
 
 .header-catalog-item:hover,
@@ -429,11 +455,7 @@ img {
 
 .slider {
   position: relative;
-  bottom: 96px;
-
-  outline: 5px solid rgba(0, 38, 255, 0.425);
-  outline-offset: -5px;
-  margin-bottom: 96px;
+  margin-top: -93px;
 }
 
 .slider-list {
@@ -442,17 +464,10 @@ img {
   margin: 0;
 }
 
-.slide-1 {
+.slide {
   display: flex;
   justify-content: space-between;
-  margin-right: 82px;
-  margin-left: 89px;
 }
-
-.slide-1 img {
-  margin-top: -33px;
-}
-
 
 .slide-description {
   width: 478px;
@@ -484,19 +499,16 @@ img {
   font-weight: 300;
   font-size: 15px;
   line-height: 20px;
-  margin-top: -4px;
-  margin-bottom: 60px;
+  margin-top: -5px;
+  margin-bottom: 51px;
 }
 
 .slider-button {
   position: relative;
-  margin-bottom: 60px;
-}
-
-.feature {
-  font-family: "Gilroy", "Arial", sans-serif;
-  font-weight: 300;
-  letter-spacing: 0.1em;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 47px;
+  width: 220px;
 }
 
 tbody {
@@ -504,19 +516,19 @@ tbody {
   flex-direction: column;
 }
 
-tr {
-  display: flex;
+td,
+th {
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.1em;
+  padding: 0;
+  margin: 0;
 }
-
-
-/*td:last-child,
-th:last-child{
-  margin-right: 0;
-}*/
 
 .characteristics {
   font-size: 36px;
   line-height: 42px;
+  margin-bottom: 11px;
 }
 
 .description {
@@ -524,54 +536,273 @@ th:last-child{
   line-height: 15px;
 }
 
-.description th {
-  font-weight: 300;
+
+/* Slide 1 */
+
+.slide-1 {
+  margin-right: 82px;
+  margin-left: 89px;
 }
+
+.slide-1 img {
+  width: 384px;
+  height: 486px;
+  margin-top: -34px;
+}
+
+.slide-1 .slide-description::after {
+  position: absolute;
+  content: "01";
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 179px;
+  line-height: 219px;
+  text-transform: uppercase;
+  right: -35px;
+  top: -51px;
+  width: 182px;
+  height: 170px;
+  color: var(--basic-white);
+}
+
+.characteristics-first-slide td {
+  width: 155px;
+}
+
+.characteristics-first-slide td:nth-child(2) {
+  width: 135px;
+}
+
+.description-first-slide th {
+  width: 155px;
+}
+
+.description-first-slide th:nth-child(2) {
+  width: 135px;
+}
+
+
+/* Slide 2 */
+
+.slide-2 {
+  margin-right: 64px;
+  margin-left: 117px;
+}
+
+.slide-2 img {
+  width: 345px;
+  height: 485px;
+  margin-top: -7px;
+}
+
+.slide-2 .slide-description {
+  width: 495px;
+}
+
+.slide-2 .slide-description::after {
+  position: absolute;
+  content: "02";
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 179px;
+  line-height: 219px;
+  text-transform: uppercase;
+  right: 12px;
+  top: -49px;
+  width: 182px;
+  height: 170px;
+  color: var(--basic-white);
+}
+
+
+/* Slide 3 */
+
+.slide-3 {
+  margin-right: 66px;
+  margin-left: 27px;
+}
+
+.slide-3 img {
+  width: 526px;
+  height: 334px;
+  margin-top: 50px;
+}
+
+.slide-3 .slide-description {
+  width: 495px;
+}
+
+.slide-3 .slide-description::after {
+  position: absolute;
+  content: "03";
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 179px;
+  line-height: 219px;
+  text-transform: uppercase;
+  right: 10px;
+  top: -49px;
+  width: 182px;
+  height: 170px;
+  color: var(--basic-white);
+}
+
+
+.characteristics-third-slide td:first-child {
+  width: 190px;
+}
+
+
+.description-third-slide th:first-child {
+  width: 190px;
+}
+
+
+/* Slider-Toggles */
+
+.slider-toggles {
+  position: absolute;
+  bottom: 141px;
+  right: 105px;
+  z-index: 20;
+  display: flex;
+  width: 72px;
+  justify-content: space-between;
+}
+
+.slider-toggle {
+  padding: 0;
+  width: 14px;
+  height: 14px;
+  /*background-color: transparent;*/
+  border: 1px solid var(--basic-black);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider-toggle-active {
+  padding: 0;
+  position: relative;
+}
+
+.slider-toggle-active::after {
+  position: absolute;
+  content: "";
+  top: 2px;
+  left: 2px;
+  width: 6px;
+  height: 6px;
+  border: 1px solid var(--basic-black);
+  border-radius: 50%;
+}
+
+
 
 /*Category */
 
 .category {
+  margin-top: 120px;
+  margin-bottom: 83px;
   outline: 5px solid rgba(255, 0, 0, 0.3);
-  margin-bottom: 49px;
 }
 
 .category-list {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 40px;
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.category-list li {
-  width: 160px;
-}
 
 .category-item {
+  position: relative;
+  display: block;
+margin-top: 190px;
+width: 160px;
+}
+
+.category-item a {
+  position: relative;
   font-family: "Gilroy", "Arial", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 22px;
-  color: inherit;
-  text-decoration: none;
   letter-spacing: 0.05em;
+  text-align: start;
+  text-decoration: none;
+  color: inherit;
+  padding-top: 198px;
 
-  text-align: center;
   outline: 5px solid rgba(0, 255, 255, 0.3);
   outline-offset: -5px;
+}
+
+.category-item a::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 160px;
+  height: 160px;
+  background-color: var(--background-yellow);
+}
+
+.category-item a::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 160px;
+  height: 160px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.category-item a:hover::before,
+.category-item a:focus::before,
+.category-item a:active::before{
+  background-color: var(--buttons-yellow-dark);
+
+}
+
+.category-item a:active::after{
+  opacity: 0.3;
+}
+
+
+.virtual-reality a::after {
+  background-image: url(../img/catalog-1-vr.svg);
+}
+
+.monopods a::after {
+  background-image: url(../img/catalog-2-monopods.svg);
+}
+
+.action-cameras a::after {
+  background-image: url(../img/catalog-3-action-cameras.svg);
+}
+
+.fitness-bands a::after {
+  background-image: url(../img/catalog-4-fitness-bands.svg);
+}
+
+.smart-watch a::after {
+  background-image: url(../img/catalog-5-smart-watch.svg);
+}
+
+.drons a::after {
+  background-image: url(../img/catalog-6-drons.svg);
 }
 
 
 /* Service */
 
 .service {
-  margin-bottom: 90px;
-  background: linear-gradient(180deg, var(--basic-white) 26%, var(--background-grey-light) 1%);
-
-  outline: 5px solid rgba(15, 194, 69, 0.7);
-  outline-offset: -5px;
-
-  height: 388px;
+  margin-bottom: 88px;
+  background: linear-gradient(180deg, var(--basic-white) 26%, var(--background-grey-light) 26%);
 }
 
 .service-wrapper {
@@ -579,16 +810,76 @@ th:last-child{
   justify-content: space-between;
 }
 
+/* Service-button */
+
 .service-aside-block {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
   width: 284px;
+}
+
+.service-aside-block::after {
+  position: absolute;
+  content: "";
+  right: 0;
+  top: 0;
+  width: 7px;
+  height: 320px;
+  background-color: var(--basic-black);
+
+}
+
+
+.service-aside-block button:first-child {
+  margin-top: 79px;
+}
+
+.service-aside-block button:last-child {
+  margin-bottom: 146px;
+}
+
+.service-button{
+  position: relative;
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 22px;
+  color: inherit;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+  letter-spacing: 0.2em;
+  outline: none;
+  background-color: transparent;
+  width: 160px;
+  padding: 9px 0;
+  margin-bottom: 22px;
+}
+
+.service-active-button:active::after{
+position: absolute;
+content: "";
+width: 117px;
+top: 0;
+right: -117px;
+background-color: var(--basic-black);
+}
+
+.service-active-button:active{
+  position: relative;
+  color: var(--background-yellow);
+background-color: var(--basic-black);
 }
 
 
 
+
+/* Service-list */
+
 .service-list {
+  position: relative;
   padding: 0;
   margin: 0;
   margin-bottom: 90px;
@@ -613,28 +904,77 @@ th:last-child{
   margin: 0;
 }
 
+.service-delivery::after {
+  position: absolute;
+  content: "";
+  right: 2px;
+  top: 1px;
+  width: 136px;
+  height: 164px;
+  background-image: url("../img/1delivery.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: 100%;
+}
+
+.service-warranty::after {
+  position: absolute;
+  content: "";
+  right: -16px;
+  top: -18px;
+  width: 171px;
+  height: 195px;
+  background-image: url("../img/2warranty.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: 100%;
+}
+
+.service-credit::after {
+  position: absolute;
+  content: "";
+  right: 8px;
+  top: -23px;
+  width: 156px;
+  height: 188px;
+  background-image: url("../img/3credit.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: 100%;
+}
+
 
 /* Brands */
 
 .brands {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 40px;
   padding: 0;
   margin: 0;
-  margin-bottom: 90px;
+  margin-bottom: 87px;
   list-style: none;
-
-  outline: 5px solid rgba(74, 36, 145, 0.7);
-  outline-offset: -5px;
 }
+
+.brands-img {
+  filter: grayscale(100%) opacity(0.2);
+}
+
+.brands-img:hover,
+.brands-img:focus,
+.brands-img:active {
+  filter: grayscale(0);
+}
+
 
 
 /* Information */
 
 .info-columns {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 86px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 127px;
+  margin-bottom: 77px;
 }
 
 .info-decoration-line {
@@ -666,8 +1006,6 @@ th:last-child{
 }
 
 .about-us {
-  outline: 5px solid rgba(0, 255, 255, 0.7);
-  outline-offset: -5px;
   width: 473px;
 }
 
@@ -711,15 +1049,16 @@ th:last-child{
   height: 8px;
 }
 
-.about-us button,
+.about-us button{
+  margin-top: 68px;
+}
+
 .write-us button {
-  margin-top: 80px;
+  margin-top: 72px;
 }
 
 
 .write-us {
-  outline: 5px solid rgba(0, 255, 0, 0.7);
-  outline-offset: -5px;
   width: 560px;
 }
 
@@ -745,27 +1084,53 @@ th:last-child{
   line-height: 22px;
   text-align: center;
   color: inherit;
-  vertical-align: top;
   text-transform: uppercase;
   border: none;
   letter-spacing: 0.2em;
-  width: 220px;
+background-color: transparent;
   outline: none;
+  padding: 9px 0;
 }
 
 .button-narrow {
+  position: relative;
   width: 160px;
 }
 
 .button-wide {
+  position: relative;
   width: 260px;
 }
-
 .button-send {
+  position: relative;
   width: 200px;
 }
 
-.button:active {
+.button::before,
+.service-button::before{
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  background-color: var(--buttons-yellow-dark);
+  height: 8px;
+  width: 100%;
+z-index: -1;
+  transition: height ease-in 0.3s;
+}
+
+.button:hover::before,
+.button:focus::before,
+.service-button:hover::before,
+.service-button:focus::before{
+  height: 100%;
+transform: translateY(-50%);
+}
+
+
+
+.button span:active {
   opacity: 0.3;
 }
 
@@ -777,10 +1142,6 @@ th:last-child{
   color: var(--basic-white);
   background-color: var(--footer-background-dark);
   padding-bottom: 1px;
-
-  outline: 5px solid rgba(255, 0, 0, 0.7);
-  outline-offset: -5px;
-
 }
 
 .main-footer a {
@@ -809,10 +1170,6 @@ th:last-child{
   list-style: none;
   padding: 0;
   margin-top: 46px;
-
-  outline: 5px solid rgba(0, 255, 255, 0.7);
-  outline-offset: -5px;
-
   width: 423px;
 }
 
@@ -955,9 +1312,6 @@ th:last-child{
   text-transform: uppercase;
   margin: 0;
   margin-right: 40px;
-  outline: 5px solid rgba(165, 14, 145, 0.7);
-  outline-offset: -5px;
-
   width: 423px;
 }
 
@@ -982,9 +1336,6 @@ th:last-child{
   line-height: 20px;
   margin: 0;
   max-width: 212px;
-
-  outline: 5px solid rgba(35, 17, 196, 0.7);
-  outline-offset: -5px;
 }
 
 .contacts-phone {
@@ -993,9 +1344,6 @@ th:last-child{
   font-size: 15px;
   line-height: 20px;
   margin: 0;
-  outline: 5px solid rgba(19, 121, 161, 0.7);
-  outline-offset: -5px;
-
   max-width: 164px;
 }
 
@@ -1026,10 +1374,6 @@ th:last-child{
 .footer-social {
   text-align: center;
   margin-left: 512px;
-
-  outline: 5px solid rgba(21, 182, 16, 0.7);
-  outline-offset: -5px;
-
   max-width: 136px;
 }
 
@@ -1048,8 +1392,6 @@ th:last-child{
 }
 
 .footer-copywrite {
-  outline: 5px solid rgba(87, 6, 104, 0.7);
-  outline-offset: -5px;
   margin-left: auto;
 }
 
@@ -1176,11 +1518,145 @@ th:last-child{
 }
 
 
+/* Modal */
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.15);
+}
+
+/* Modal-Feedback */
+
+.modal-feedback {
+  top: 120px;
+  bottom: auto;
+  width: 760px;
+  padding: 92px 100px 69px;
+  background-color: var(--basic-white);
+}
+
+.modal-feedback-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.modal-feedback-item {
+  margin: 0;
+  padding: 0;
+}
+
+.modal-feedback-item .input-name,
+.modal-feedback-item .input-email {
+  width: 360px;
+}
+
+.modal-feedback-item label {
+  display: block;
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 22px;
+  color: var(--basic-black);
+  padding: 0;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.modal-feedback-item input {
+  padding: 16px 20px;
+  background-color: var(--background-input-form);
+  box-sizing: border-box;
+  border: none;
+}
+
+.modal-feedback-item input:not(.input-letter) {
+  width: 360px;
+  height: 50px;
+}
+
+.modal-feedback-item:first-child {
+  margin-right: 40px;
+}
+
+.input-letter {
+  width: 760px;
+  height: 167px;
+}
+
+.modal-first-level {
+  margin-bottom: 32px;
+}
+
+.modal-second-level {
+  margin-bottom: 54px;
+}
+
+
+/* Modal-Map */
+
+.modal-map {
+  width: 960px;
+  height: 573px;
+}
+
+.modal-map iframe {
+  border: none;
+}
+
+
+/* Modal-Close */
+
+.modal-close {
+  position: absolute;
+  top: 21px;
+  right: 20px;
+  width: 55px;
+  height: 55px;
+  background-color: var(--background-yellow);
+  border-radius: 50%;
+  border: 0;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.modal-close::after {
+  position: absolute;
+  content: "";
+  top: 18px;
+  left: 18px;
+  width: 20px;
+  height: 20px;
+  opacity: 0.7;
+  background-image: url(../img/modal-close.svg);
+}
+
+.modal-close-map::after {
+  top: 18px;
+  left: 18px;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  opacity: 1;
+}
+
+.modal-close:active {
+  opacity: 0.3;
+}
+
+
+
+
 /* Catalog-page */
 
 .page-catalog {
-  outline: 5px solid rgba(255, 0, 0, 0.7);
-  outline-offset: -5px;
+  overflow: hidden;
 }
 
 .page-catalog-head {
@@ -1196,8 +1672,6 @@ th:last-child{
 
   margin: 0 0 30px 60px;
   padding: 0;
-  outline: 5px solid rgba(0, 255, 0, 0.7);
-  outline-offset: -5px;
 }
 
 /* Breadecrumbs */
@@ -1213,14 +1687,13 @@ th:last-child{
   list-style: none;
   padding: 0;
   margin: 0 0 50px 60px;
-  outline: 5px solid rgba(0, 0, 255, 0.7);
-  outline-offset: -5px;
 }
 
 .breadcrumbs-items {
   position: relative;
   padding-right: 22px;
   margin-right: 19px;
+  opacity: 0.3;
 }
 
 .breadcrumbs-items::after {
@@ -1245,11 +1718,9 @@ th:last-child{
   display: none;
 }
 
-
-.breadcrumbs-items {
+.breadcrumbs a{
   color: var(--basic-black);
   text-decoration: none;
-  opacity: 0.3;
 }
 
 .breadcrumbs a:hover,
@@ -1260,7 +1731,6 @@ th:last-child{
 .breadcrumbs a:active {
   opacity: 0.1;
 }
-
 
 
 
@@ -1442,9 +1912,9 @@ th:last-child{
   border-radius: 50%;
 }
 
-.button-filter-send{
-margin-top: 54px;
-width: 200px;
+.button-filter-send {
+  margin-top: 54px;
+  width: 200px;
 }
 
 
@@ -1465,8 +1935,6 @@ width: 200px;
   justify-content: flex-start;
   align-items: baseline;
   background-color: var(--background-grey-light);
-  outline: 5px solid rgba(4, 0, 255, 0.7);
-  outline-offset: -5px;
   height: 70px;
 }
 
@@ -1474,11 +1942,10 @@ width: 200px;
   position: absolute;
   content: "";
   height: 100%;
-  width: 5vw;
+  width: 50vw;
   top: 0;
   left: 100%;
   background-color: var(--background-grey-light);
-  background-color: red;
 }
 
 .sort-type-list {
@@ -1570,8 +2037,6 @@ width: 200px;
 /* Items */
 
 .items {
-  outline: 5px solid rgba(234, 0, 255, 0.7);
-  outline-offset: -5px;
   margin: 70px 0 78px 72px;
 }
 
@@ -1599,13 +2064,15 @@ width: 200px;
   margin-right: 0;
 }
 
-.catalog-item:nth-last-child(-n+2){
+.catalog-item:nth-last-child(-n+2) {
   margin-bottom: 0;
 }
 
 .catalog-item img {
   width: 360px;
   height: 380px;
+  object-fit: contain;
+  background-color: var(--basic-white);
 }
 
 .catalog-item p {
